# Splatform

./: CMakeLists.txt  README.md
assets/scenes/: MyBeautifulTest.splat
editor/: CMakeLists.txt  main.cpp
editor/include/: Editor.h
editor/include/TempEditor/: ButtonFunctionality.h  EditorButton.h  EditorStartup.h  EditorTempCamera.h  GenericCollectable.h  SceneObject.h  SimpleMapEditor.h
editor/src/: Editor.cpp
editor/src/TempEditor/: ButtonFunctionality.cpp  EditorButton.cpp  EditorStartup.cpp  EditorTempCamera.cpp  SceneObject.cpp  SimpleMapEditor.cpp
engine/: CMakeLists.txt
engine/Scenes/include/: Scene.h
engine/Serialisation/ID/: IDManager.h
engine/enginescripts/: generate_registry.py
engine/include/: AABB.h  AABBCollider.h  BoxRenderer.h  Collider.h  Constants.h  Engine.h  EngineInputSystem.h  GameObject.h  RenderObject.h
engine/include/Gizmos/: GizmoManager.h
engine/include/Objects/: Behaviour.h  EntityID.h  GameObject.h  Object.h
engine/include/Scenes/: Scene.h  SceneManager.h
engine/include/Serialization/: Serializer.h
engine/include/Systems/: Core.h  FastCommonExtensions.h  FunctionSubscriber.h  ThreadPool.h
engine/include/Terrain/BuildingBlocks/: RectangleBlock.h
engine/include/UI/: Button.h  TextBox.h
engine/src/: AABB.cpp  AABBCollider.cpp  Behaviour.cpp  BoxRenderer.cpp  Collider.cpp  Engine.cpp  EngineInputSystem.cpp  GameObject.cpp  Object.cpp  RenderObject.cpp  TextBox.cpp
engine/src/Gizmos/: GizmoManager.cpp
engine/src/Scenes/: Scene.cpp  SceneManager.cpp
engine/src/Serialization/: Serializer.cpp
engine/src/Systems/: FunctionSubscriber.cpp  Threadpool.cpp
engine/src/Terrain/BuildingBlocks/: RectangleBlock.cpp
engine/src/UI/: Button.cpp
game/: CMakeLists.txt  main.cpp
game/include/: ColliderDebug.h  CollisionTests.h  GameManager.h  GameSettings.h  SceneCamera.h  SceneLoadDummy.h  Settlement.h  SettlerManager.h  TerrainTile.h  TestScript.h  WorldMap.h
game/include/CollisionTests/: AABBTestClass.h  ColliderDebug.h  LoadSaveTest.h  LoadUI.h
game/include/TestPlayer/: PlayerHUD.h  PlayerScenario.h  PlayerSpawn.h  TestCollectable.h  TestPlayer.h
game/include/UI/: GameSpeedUI.h  ScreenspaceButton.h
game/src/: AABBTestClass.cpp  ColliderDebug.cpp  CollisionTests.cpp  GameManager.cpp  ObjectSpawnList.cpp  SceneCamera.cpp  SceneLoadDummy.cpp  Settlement.cpp  SettlerManager.cpp  TerrainTile.cpp  TestScript.cpp  WorldMap.cpp
game/src/CollisionTests/: ColliderDebug.cpp  CollisionTests.cpp  LoadUI.cpp
game/src/TestPlayer/: PlayerScenario.cpp  PlayerSpawn.cpp  TestCollectable.cpp  TestPlayer.cpp
game/src/UI/: GameSpeedUI.cpp  ScreenspaceButton.cpp
